fix: changed some the text and images

--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
                             clients, ensuring they are satisfied with your
                             services and addressing any concerns.
                         </p>
-                        <button
-                            class="hero__cta | btn-primary bg-accent ff-accent uppercase"
+                        <a href="#contact"
+                            class="hero__cta | btn-primary bg-accent ff-accent uppercase d-block"
                             data-fade-in-cta
                         >
                             Get appointment
-                        </button>
+                    </a>
                     </div>
                     <img
                         class="hero__image"
@@ -215,10 +215,7 @@
                                     Business Analysis
                                 </h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Explicabo maxime quis,
-                                    earum nisi ullam officiis temporibus dolor
-                                    molestiae?
+                                    Business analysis is the process of examining and evaluating business demands and identifying solutions to potential challenges.
                                 </p>
                             </div>
                         </article>
@@ -244,9 +241,7 @@
                                     Strategic Planning
                                 </h4>
                                 <p>
-                                    Quo architecto, quae eos totam quibusdam
-                                    doloribus, nihil voluptatum deserunt
-                                    reiciendis libero veritatis deleniti
+                                    Strategic planning is an organized, systematic and coordinated way to plan for achieving specific goals.
                                 </p>
                             </div>
                         </article>
@@ -283,9 +278,7 @@
                                     Market Research
                                 </h4>
                                 <p>
-                                    culpa dignissimos eum aspernatur pariatur!
-                                    Odit eveniet atque illo sapiente facilis
-                                    harum magni rem, praesentium ab dicta quam?
+                                    Market research is the process of gathering and analyzing data about a target market.
                                 </p>
                             </div>
                         </article>
@@ -334,9 +327,7 @@
                                             Professional Team
                                         </h5>
                                         <p>
-                                            Lorem ipsum dolor sit amet
-                                            consectetur adipisicing elit.
-                                            Mollitia quasi dicta quo
+                                            A group of individuals who are highly skilled and work together in a formal capacity to achieve common goals or objectives within a particular field.
                                         </p>
                                     </div>
                                 </article>
@@ -402,10 +393,7 @@
                                             Diverse Opportunities
                                         </h5>
                                         <p>
-                                            Consequuntur error cupiditate
-                                            provident perferendis eaque
-                                            distinctio. Incidunt voluptatum
-                                            accusantium obcaecati.
+                                            A wide range of different chances or possibilities available across various areas or fields.
                                         </p>
                                     </div>
                                 </article>
@@ -445,9 +433,7 @@
                                             Problem Solving
                                         </h5>
                                         <p>
-                                            Adipisci molestiae velit assumenda
-                                            dolores quod delectus modi nobis
-                                            suscipit corporis!
+                                            The process of identifying, analyzing, and finding solutions to challenges or difficulties.
                                         </p>
                                     </div>
                                 </article>
@@ -457,11 +443,11 @@
                     </div>
                     <div class="flex">
                         <p class="fw-bold uppercase text-center">
-                            <span class="fs-600 ff-heading">500+</span>
+                            <span class="fs-600 ff-heading">200+</span>
                             <span class="d-block">Projects completed</span>
                         </p>
                         <p class="fw-bold uppercase text-center">
-                            <span class="fs-600 ff-heading">115+</span>
+                            <span class="fs-600 ff-heading">100+</span>
                             <span class="d-block">HR consultants</span>
                         </p>
                         <p class="fw-bold uppercase text-center">
@@ -469,7 +455,7 @@
                             <span class="d-block">Awards won</span>
                         </p>
                         <p class="fw-bold uppercase text-center">
-                            <span class="fs-600 ff-heading">920K</span>
+                            <span class="fs-600 ff-heading">500K</span>
                             <span class="d-block">Happy clients</span>
                         </p>
                     </div>
@@ -595,9 +581,7 @@
                                 >
                             </h6>
                             <p>
-                                Consequuntur corrupti provident doloremque?
-                                Quidem, quis. Repellendus alias reprehenderit
-                                ipsa? Quod, a.
+                                Highly knowledgeable professionals who provide specialized advice and guidance in a particular field or industry.
                             </p>
                             <div class="team__ability | flow">
                                 <div class="flex">
@@ -1032,20 +1016,15 @@
                         Reviews from our clients
                     </p>
                     <p>
-                        Accusamus minus consectetur nostrum molestias corrupti
-                        recusandae vero sapiente aliquam nesciunt unde, commodi
-                        ratione! Hic laudantium itaque animi, nesciunt officia
-                        reprehenderit ratione ipsam aliquam quo ducimus eligendi
-                        error quae, neque ex culpa? Cupiditate consequatur quis
-                        iste eius minus facilis ratione.
+                        Kasbiz is a highly professional consulting firm known for delivering tailored, actionable solutions that drive real results. Their experienced team brings innovative ideas and deep industry knowledge, fostering long-term partnerships with clients. Kasbiz consistently offers top-notch guidance, ensuring both immediate growth and sustainable future success for businesses.
                     </p>
                     <img
                         class="testimonial__image"
-                        src="images/testimonial1.webp"
+                        src="images/testimonial.webp"
                         alt=""
                     />
                     <p class="fw-bold">Jane Doe</p>
-                    <p class="fw-bold">CEO, Kept IT Solutions</p>
+                    <p class="fw-bold">MD, Kept IT Solutions</p>
                 </div>
             </article>
             <!-- Blog Section -->
@@ -1057,7 +1036,7 @@
                         <img src="images/blog-article1.webp" alt="" />
                         <div class="flow">
                             <p class="ff-heading fw-bold">
-                                Repellat quae aliquam a et exercitationem.
+                                Maximizing ROI: The Benefits of Hiring a Business Consultant
                             </p>
                             <div class="flex">
                                 <div class="flex">
@@ -1097,8 +1076,7 @@
                         <img src="images/blog-article2.webp" alt="" />
                         <div class="flow">
                             <p class="ff-heading fw-bold">
-                                Nostrum, sed aut? Magni natus repellendus autem
-                                ad!
+                                From Strategy to Execution: How Consulting Firms Drive Transformation
                             </p>
                             <div class="flex">
                                 <div class="flex">
@@ -1138,8 +1116,7 @@
                         <img src="images/blog-article1.webp" alt="" />
                         <div class="flow">
                             <p class="ff-heading fw-bold">
-                                Illo eos eveniet non commodi pariatur odit
-                                porro.
+                                Why Your Business Needs a Strategic Plan (and How Consultants Help)
                             </p>
                             <div class="flex">
                                 <div class="flex">
@@ -1214,7 +1191,7 @@
                                         d="M9.8,11c1.6,0.3,2.7,1,2.7,1.8c0,1.1-2,2-4.5,2s-4.5-0.9-4.5-2c0-0.8,1.2-1.6,2.8-1.8"
                                         class="colorStroke231f20 svgStroke"
                                     ></path></svg
-                                >12345 Street, Nairobi
+                                >Nairobi
                             </p>
                             <p class="contact__info | flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" id="Phone">
@@ -1238,6 +1215,7 @@
                                     </g></svg
                                 >info@kasbiz.com
                             </p>
+                            <!-- <p>Building and maintaining strong relationships with clients, ensuring they are satisfied with your services and addressing any concerns</p> -->
                         </div>
                         <form class="contact__form | bg-secondary grid">
                             <input type="text" name="name" id="" placeholder="Name" />
